# vyralforge

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  config.py  pyproject.toml  requirements.txt  vyralforge.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  niche_preset.md
.github/workflows/: ci.yml
analyzer/: hooks.py  sounds.py  timing.py  viral_score.py
database/: __init__.py  db.py  schema.sql
planner/: generate_week.py  llm_brain.py
scrapers/: apify_discover.py  apify_reels.py  tiktok_trends.py
tests/: conftest.py  test_db.py  test_sounds.py  test_viral_score.py
ui/: render_dashboard.py
